# GenAI_LLMApps_Chatbot

./: README.md
BasicMultiAgent/: basic-multiagent.py  main.py  pyproject.toml  requirements.txt
ChainsAndRunnables/: builtin-functions-for-runnables.py  builtin-runnables.py  combining-chain.py  lcel-chains-in-rag.py  legacy-vs-lcel-chain.py  main.py  pyproject.toml  requirements.txt
LLMApps-chatbot/: package-lock.json  package.json
LLMApps-chatbot/app/: output.css
LangChain Basics/: main.py  prompt-templates.py  pyproject.toml  requirements.txt
LangChainApps/: main.py  pyproject.toml  requirements.txt
LangChainApps/Level-1-Apps/: advanced-chatbot.py  key-data-extraction.py  messages.json  qa-from-pdf.py  qa-from-sql.py  sentiment-analysis.py  simple-agent.py  simple-chatbot.py
LangChainApps/Level-2-Apps/: blog-post-generator.py  evaluate_response.py
LangChainApps/data/: sample.txt
LlamaIndex/: llamaindex-deep-dive.ipynb  llamaindex.ipynb  main.py  pyproject.toml
LlamaIndex/storage/: default__vector_store.json  docstore.json  index_store.json
RAG/: data_loaders.py  embeddings.py  pyproject.toml  rag-with-lcel.py  requirements.txt  retrievers.py  splitters.py  top-k.py  vector_stores.py
RAG Phases/: 01-rag-concepts-2025.ipynb  02-rag-quickstart-modern.ipynb  03-rag-conversational.ipynb  04-rag-multimodal.ipynb  05-rag-production.ipynb
