[project]
name = "chainsandrunnables"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "docarray>=0.41.0",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.12.0",
]
