[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.35",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "unstructured>=0.18.15",
    "wikipedia>=1.4.0",
]
